Some updates
* improve theme switching, restart not required.
* switch to material icons
* icons switch fill color with theme